@@ -1,3 +1,7 @@
+Thu Nov 15 00:51:50 GMT 2012  Olly Betts <olly@survex.com>
+
+	* bin/xapian-replicate.cc: Tweak code layout.
+
 Wed Nov 14 21:40:45 GMT 2012  Olly Betts <olly@survex.com>
 
 	* net/remoteconnection.cc: Allow files > 32G to be be copied by
